--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: TR
+title: trgamer.club
 logo: /assets/img/logo.png
 description: Minimal is a theme for GitHub Pages.
 show_downloads: false
