--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: trgamer.club
-logo: /assets/img/logo.png
+logo: 
 description: Minimal is a theme for GitHub Pages.
 show_downloads: false
 google_analytics:
