--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: trgamer.club
 logo: 
-description: Minimal is a theme for GitHub Pages.
+description: Oyuncu topluluğu
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
